tests/ui/save-analysis/issue-73020.rs
// compile-flags: -Zsave-analysis
use {self}; //~ ERROR E0431

fn main () {
}
